--- a/Turbo_AzWithMVVM/Domain/Views/MainWindow.xaml
+++ b/Turbo_AzWithMVVM/Domain/Views/MainWindow.xaml
@@ -309,49 +309,62 @@
         </StackPanel>
 
         <StackPanel>
-            <ListView
-                 ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                 HorizontalAlignment="Center"
-                 BorderThickness="0"
-                 Margin="0,20,0,0"
-                Height="350"
-                 Background="Transparent"
-                ItemContainerStyle="{StaticResource ListViewItemStyle}"
-                 ScrollViewer.VerticalScrollBarVisibility="Visible"
-                 ItemsSource="{Binding Cars,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}">
+            <ListView ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                      HorizontalAlignment="Center"
+                      BorderThickness="0"
+                      Margin="0,20,0,0"
+                      Height="350"
+                      Background="Transparent"
+                      ItemContainerStyle="{StaticResource ListViewItemStyle}"
+                      ScrollViewer.VerticalScrollBarVisibility="Visible"
+                      ItemsSource="{Binding Cars,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}">
                 <ListView.ItemTemplate >
                     <DataTemplate >
-                        <Border
-                                Width="150"
+                        <Border Width="150"
                                 Height="230"
+                                BorderBrush="Black"
+                                BorderThickness="1"
                                 Margin="0,10,20,0" >
                             <StackPanel >
-
-
                                 <Image Height="120"
                                        Width="130"
                                        Source="{Binding ImagePath}"
-                                       Stretch="Fill">
-
-                                </Image>
+                                       Stretch="Fill"/>
 
                                 <StackPanel Orientation="Horizontal">
-                                    <TextBlock Text="{Binding Price}" FontSize="14" Foreground="Black" FontWeight="Bold"></TextBlock>
-                                    <TextBlock  FontSize="14" Foreground="Black" FontWeight="Bold" >$</TextBlock>
+                                    <TextBlock Text="{Binding Price}"
+                                               FontSize="14" 
+                                               Foreground="Black" 
+                                               FontWeight="Bold"/>
+                                    <TextBlock  FontSize="14" 
+                                                Foreground="Black" 
+                                                FontWeight="Bold" >$</TextBlock>
                                 </StackPanel>
-                                <TextBlock Text="{Binding Brand}" FontSize="14" Foreground="Black" ></TextBlock>
+
+                                <TextBlock Text="{Binding Brand}" 
+                                           FontSize="14" 
+                                           Foreground="Black" />
+
                                 <StackPanel Orientation="Horizontal">
-                                    <TextBlock Text="{Binding Year}" FontSize="14" Foreground="Black" ></TextBlock>
-                                    <TextBlock FontSize="14" Foreground="Black"  Text=", "></TextBlock>
-                                    <TextBlock Text="{Binding Mileage}" FontSize="14" Foreground="Black" ></TextBlock>
-                                    <TextBlock FontSize="14" Foreground="Black" > km</TextBlock>
+                                    
+                                    <TextBlock Text="{Binding Year}" 
+                                               FontSize="14"
+                                               Foreground="Black" />
+
+                                    <TextBlock FontSize="14"
+                                               Foreground="Black"  
+                                               Text=", "/>
+
+                                    <TextBlock Text="{Binding Mileage}"
+                                               FontSize="14"
+                                               Foreground="Black" />
+
+                                    <TextBlock FontSize="14" 
+                                               Foreground="Black" 
+                                               > km</TextBlock>
                                 </StackPanel>
                             </StackPanel>
-
                         </Border>
-
-
-
                     </DataTemplate>
 
                 </ListView.ItemTemplate>
